Bug 22247 - [4.1 Regression] tree-ssa-structalias.c: `uint' undeclared
Summary: [4.1 Regression] tree-ssa-structalias.c: `uint' undeclared
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: middle-end (show other bugs)
Version: 4.1.0
: P2 normal
Target Milestone: 4.1.0
Assignee: Not yet assigned to anyone
URL:
Keywords: build
Depends on:
Blocks:
 
Reported: 2005-06-30 11:50 UTC by Francois-Xavier Coudert
Modified: 2005-06-30 20:53 UTC (History)
2 users (show)

See Also:
Host:
Target: i686-pc-mingw32
Build:
Known to work:
Known to fail:
Last reconfirmed: 2005-06-30 18:22:07


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Francois-Xavier Coudert 2005-06-30 11:50:34 UTC
On i686-pc-mingw32, a simple compilation that worked before
(--enable-languages=c,f95) gives the following error (with Danny Smith's patch
from http://gcc.gnu.org/ml/gcc-patches/2005-05/msg00009.html, because mingw32
adn cygwin bootstraps are broken):

gcc -I/home/FX/local/include -L/home/FX/local/lib -c   -g -O2 -DIN_GCC   -W -
Wall -Wwrite-strings -Wstrict-prototypes -Wmissing-prototypes -Wold-style-defin
ition -fno-common   -DHAVE_CONFIG_H    -I. -I. -I../../gcc/gcc -I../../gcc/gcc/
. -I../../gcc/gcc/../include -I./../intl -I../../gcc/gcc/../libcpp/include  ../
../gcc/gcc/tree-ssa-structalias.c -c 2>&1 |head
../../gcc/gcc/tree-ssa-structalias.c: In function `VEC_uint_must_be_integral_type':
../../gcc/gcc/tree-ssa-structalias.c:991: error: `uint' undeclared (first use in
this function)
../../gcc/gcc/tree-ssa-structalias.c:991: error: (Each undeclared identifier is
reported only once
../../gcc/gcc/tree-ssa-structalias.c:991: error: for each function it appears in.)
../../gcc/gcc/tree-ssa-structalias.c:991: error: syntax error before numeric
constant

Attached is the preprocessed source. What annoys me is that I don't see any
relevant change to tree-ssa-structalias.c in the ChangeLog entries.
Comment 1 Daniel Berlin 2005-06-30 13:58:35 UTC
tree-ssa-structalias has had that uint since inception.
Kazu added it  as part of VEC'ification prior to submission.
I believe you should be able to do s/uint/unsigned/.

If this works, please submit a patch and i will approve it
Comment 2 Andrew Pinski 2005-06-30 18:21:56 UTC
Confirmed, changing uint to unsigned was able to bootstrap on powerpc-darwin just fine.
Comment 3 Andrew Pinski 2005-06-30 18:22:07 UTC
Confirmed, changing uint to unsigned was able to bootstrap on powerpc-darwin just fine.
Comment 4 GCC Commits 2005-06-30 20:43:57 UTC
Subject: Bug 22247

CVSROOT:	/cvs/gcc
Module name:	gcc
Changes by:	fxcoudert@gcc.gnu.org	2005-06-30 20:43:46

Modified files:
	gcc            : ChangeLog tree-ssa-structalias.c 

Log message:
	PR middle-end/22247
	* tree-ssa-structalias.c (build_constraint_graph, scc_visit,
	process_unification_queue, init_topo_info, topo_visit,
	init_scc_info, free_scc_info, perform_var_substitution,
	solve_graph): Use unsigned instead of uint.

Patches:
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/ChangeLog.diff?cvsroot=gcc&r1=2.9297&r2=2.9298
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/tree-ssa-structalias.c.diff?cvsroot=gcc&r1=2.6&r2=2.7

Comment 5 Francois-Xavier Coudert 2005-06-30 20:53:02 UTC
Fixed.