	PR middle-end/22247 	* tree-ssa-structalias.c (build_constraint_graph, scc_visit, 	process_unification_queue, init_topo_info, topo_visit, 	init_scc_info, free_scc_info, perform_var_substitution, 	solve_graph): Use unsigned instead of uint.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@101475 138bc75d-0d04-0410-961f-82ee72b054a4